fix: scrollbar

--- a/book-nest/src/app.css
+++ b/book-nest/src/app.css
@@ -7,6 +7,11 @@
         -webkit-tap-highlight-color: transparent;
 }
 
+html {
+        height: 100%;
+        overflow: hidden;
+}
+
 a {
         color: inherit;
         text-decoration: none;
@@ -37,6 +42,8 @@ button {
 }
 
 body {
+        height: 100%;
+        overflow: hidden;
         font-family: "Poppins", sans-serif;
         background-color: #f0eee2;
 }
